--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>rentacar</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>rentacar</name>
-	<description>Aplicación para prestamo de carros</description>
+	<description>Aplicación para prestamo de carros bonitos</description>
 
 	<properties>
 		<java.version>1.8</java.version>
